# dissetation

./: .gitignore  POSTER.xcf  temp.py
article/: LICENSE  picking.md  proposal.odt  proposal.xml  references.bib  test.tex  timeline.gantt
article/sources/: projectideas.md  sources.md
artifact/: .clangd  .gitignore  Makefile  meson.build
artifact/include/: g_gamestate.h  utils.h  w_window.h
artifact/src/: g_gamestate.c  main.c  w_window.c
synthetic_missing_data/: missing-maker-heart-disease.py
synthetic_missing_data/out_small_datasets/: MAR-heart-disease.csv  MCAR-VARIED-heart-disease.csv  MCAR-heart-disease.csv  MNAR-heart-disease.csv
visu/: Makefile  compose.yml  index.html  makefile  package-lock.json  package.json  pnpm-lock.yaml  todo.md  vite.config.ts
visu/nginx/: nginx-routing.conf  nginx.Dockerfile  nginx.conf
visu/src/: App.tsx
visu/src/c/: main.c
visu/visu/: components.json  dev.Dockerfile  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
visu/visu-backend/: .env  .golangci.yaml  config.yaml  dev.Dockerfile  go.mod  go.sum  main.go
visu/visu-backend/configuration/: config.go
visu/visu-backend/handler/: file_handler.go  imputer_handler.go  test_handler.go
visu/visu-backend/imputer_service/: _test.py  dev.Dockerfile  imputer.py  imputer_service.py  info.py  knn_imputer.py  mice_imputer.py  requirements.txt  simple_imputer.py  test_service.py  utils.py
visu/visu-backend/logger/: logger.go
visu/visu-backend/model/: file_node.go  info.go  simple_imputer.go
visu/visu-backend/router/: router.go
visu/visu-backend/service/: file_service.go  imputer_service.go  test_service.go
visu/visu-backend/utils/: utils.go
visu/visu/src/: App.tsx  (+1 more)
(+33 files in other folders)
